2005-05-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data histogram_range_fiddling): Treat all boxwidths
	as absolute when in HISTOGRAM plot mode. Be more thorough in checking
	for histogram entries that extend the X range in auto-scale mode.
	Fixes bugs reported by Andrew J Caird.

2005-05-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc (timecolumn): New documentation entry for this
	old "secret" function.

	* src/datafile.c (f_timecolumn): Major brush-over, and lots of
	comments explaining just how broken this function currently is.

2005-05-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c (isstringvar) src/util.h: Have this function always
	return FALSE if gnuplot is configured with --disable-stringvariables.

	* term/tgif.trm (TGIF_options): Accept string variable for font name.

	* src/hidden3d.c (build_networks): If vertex has previously been flagged
	as invalid, do not pass it on for further processing.
	Fixes bug #1194035 / #1194055

2005-04-29  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm term/gd.trm term/pdf.trm src/misc.c src/gplt_x11.c:
	Whitespace cleanup.

	* term/gd.trm (PNG_options): Accept string variable for font name.

	* src/plot2d.c (get_data eval_plots): If the x-axis is in log mode,
	treat boxwidth as a constant visual width rather than as a constant
	number of units along x, which would produce narrower boxes as x
	increases.  Issue an error message if the x-axis is in log mode
	when the plot style is histograms.

	* docs/gnuplot.doc: Document behaviour of 'set boxwidth' for log axes.

	* docs/gnuplot.doc term/x11.trm term/post.trm: Clean up line length
	and other issues that cause errors during creation of TeX docs.

2005-04-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d.c (set_plot_with_palette): Fix for 'splot x, y with pm3d'.

2005-04-28  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_options): Accept string variables for terminal